k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lankan-primire
  labels:
    name: lankan-primire
    environment: production
